Converted UI from code to XAML
Converted all  Ui creation from code int an XAML file, much more readable. and made small UI tweaks

--- a/ChessB.csproj
+++ b/ChessB.csproj
@@ -129,5 +129,8 @@
     <Resource Include="Images\wQ.PNG" />
     <Resource Include="Images\wR.PNG" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="bP.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
