--- a/ChessB.csproj
+++ b/ChessB.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Classes\Game\Game.cs" />
     <Compile Include="Classes\Move.cs" />
     <Compile Include="Classes\Player\Player.cs" />
+    <Compile Include="Classes\UI\drawableCanvas.cs" />
     <Compile Include="Classes\UI\MoveableImage.cs" />
     <Compile Include="Classes\Pieces\Bishop.cs" />
     <Compile Include="Classes\Board\Board.cs" />
