--- a/ChessB.csproj
+++ b/ChessB.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Classes\Pieces\Piece.cs" />
     <Compile Include="Classes\Pieces\Queen.cs" />
     <Compile Include="Classes\Pieces\Rook.cs" />
+    <Compile Include="Classes\UI\Tile.cs" />
     <Compile Include="Classes\UI\Ui.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
