Added list box to track moves

--- a/ChessB.csproj
+++ b/ChessB.csproj
@@ -167,5 +167,8 @@
   <ItemGroup>
     <Resource Include="Readme.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Number1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
