Added tree and node constructors

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ bin/Debug/ChessB.pdb
 bin/Debug/ChessB.exe
 bin/Debug/ChessB.exe
 .vs/ChessB/v16/.suo
+obj/Debug/ChessB_MarkupCompile.cache
+obj/Debug/ChessB.pdb
+obj/Debug/ChessB.csprojAssemblyReference.cache
+obj/Debug/ChessB.csproj.CoreCompileInputs.cache
+obj/Debug/ChessB.csprojAssemblyReference.cache
+obj/Debug/ChessB.csproj.CoreCompileInputs.cache
+obj/Debug/ChessB.csproj.CoreCompileInputs.cache
+*.cache
+*.cache
