--- a/ChessB.csproj
+++ b/ChessB.csproj
@@ -69,6 +69,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Data Structures\MoveTree.cs" />
+    <Compile Include="Classes\Data Structures\Node.cs" />
     <Compile Include="Classes\Game\Game.cs" />
     <Compile Include="Classes\Move.cs" />
     <Compile Include="Classes\Player\Player.cs" />
@@ -176,5 +178,6 @@
   <ItemGroup>
     <Resource Include="Images\greenTournament.PNG" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
