functions for highlighting hovered tiles
functions for highlighting hovered tiles when selected piece is over them

--- a/ChessB.csproj
+++ b/ChessB.csproj
@@ -178,6 +178,8 @@
   <ItemGroup>
     <Resource Include="Images\greenTournament.PNG" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\hoveredTileImage.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
