--- a/ChessB.csproj
+++ b/ChessB.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Classes\Data Structures\MoveTree.cs" />
     <Compile Include="Classes\Data Structures\Node.cs" />
     <Compile Include="Classes\Game\Game.cs" />
-    <Compile Include="Classes\Move.cs" />
+    <Compile Include="Classes\Board\Move.cs" />
     <Compile Include="Classes\Player\Player.cs" />
     <Compile Include="Classes\UI\drawableCanvas.cs" />
     <Compile Include="Classes\UI\MoveableImage.cs" />
