--- a/ChessB.csproj
+++ b/ChessB.csproj
@@ -182,5 +182,8 @@
   <ItemGroup>
     <Resource Include="Images\hoveredTileImage.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Sounds\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
